--- a/Experiments-iOS-OpenGL/Base.lproj/Main.storyboard
+++ b/Experiments-iOS-OpenGL/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Q0U-14-3xB">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="oxn-Z4-LUI">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -13,7 +13,7 @@
         <!--Title-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ShaderViewController" customModule="Experiments_iOS_OpenGL" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController hidesBottomBarWhenPushed="YES" id="BYZ-38-t0r" customClass="ShaderViewController" customModule="Experiments_iOS_OpenGL" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -1087,7 +1087,7 @@
         <!--Title-->
         <scene sceneID="ulN-KY-FA3">
             <objects>
-                <glkViewController preferredFramesPerSecond="60" id="bXm-9g-9eZ" customClass="ShaderGLKitViewController" customModule="Experiments_iOS_OpenGL" customModuleProvider="target" sceneMemberID="viewController">
+                <glkViewController hidesBottomBarWhenPushed="YES" preferredFramesPerSecond="60" id="bXm-9g-9eZ" customClass="ShaderGLKitViewController" customModule="Experiments_iOS_OpenGL" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Yea-mi-SZl"/>
                         <viewControllerLayoutGuide type="bottom" id="wIc-nC-NXt"/>
@@ -1106,10 +1106,11 @@
             </objects>
             <point key="canvasLocation" x="1633" y="458"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Shaders-->
         <scene sceneID="TeE-oa-yMF">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Q0U-14-3xB" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Shaders" id="EQM-dD-Ety"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="ZN2-lh-aFH">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
@@ -1122,7 +1123,122 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pce-AN-sC8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-706.39999999999998" y="122.78860569715144"/>
+            <point key="canvasLocation" x="233" y="-1791"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="YHc-ae-UK8">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="oxn-Z4-LUI" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="yW1-n0-sGT">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="Q0U-14-3xB" kind="relationship" relationship="viewControllers" id="8bx-h0-RVs"/>
+                        <segue destination="OVm-Q1-51y" kind="relationship" relationship="viewControllers" id="KOA-yL-D97"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6Eu-gv-5AS" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2119" y="-2646"/>
+        </scene>
+        <!--Table View Controller-->
+        <scene sceneID="k6a-hN-nie">
+            <objects>
+                <tableViewController id="GZC-NB-ncg" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="rWg-lr-bWn">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <sections>
+                            <tableViewSection id="Ew9-O7-Kyd">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" textLabel="Jep-qd-xod" style="IBUITableViewCellStyleDefault" id="ada-Ms-9kh">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ada-Ms-9kh" id="QKu-fh-glD">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Model" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Jep-qd-xod">
+                                                    <rect key="frame" x="16" y="0.0" width="344" height="43.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="Si2-tt-oNr" kind="show" id="0aA-tH-mdv"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                        </sections>
+                        <connections>
+                            <outlet property="dataSource" destination="GZC-NB-ncg" id="YoS-pu-lrw"/>
+                            <outlet property="delegate" destination="GZC-NB-ncg" id="OVh-dy-r2r"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="mBL-a6-x2k"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="GVS-Sa-ZRc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3327" y="-962"/>
+        </scene>
+        <!--Model View Controller-->
+        <scene sceneID="4jt-a7-vw9">
+            <objects>
+                <viewController hidesBottomBarWhenPushed="YES" id="Si2-tt-oNr" customClass="ModelViewController" customModule="Experiments_iOS_OpenGL" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="n09-nL-BBk"/>
+                        <viewControllerLayoutGuide type="bottom" id="4u2-6e-h2d"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="mm1-nh-BtG">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7pK-NF-fwq" customClass="GLModelView">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="7pK-NF-fwq" firstAttribute="leading" secondItem="mm1-nh-BtG" secondAttribute="leading" id="Hua-0d-eUv"/>
+                            <constraint firstAttribute="trailing" secondItem="7pK-NF-fwq" secondAttribute="trailing" id="QK1-Zf-jF2"/>
+                            <constraint firstItem="4u2-6e-h2d" firstAttribute="top" secondItem="7pK-NF-fwq" secondAttribute="bottom" id="bar-UG-dZz"/>
+                            <constraint firstItem="7pK-NF-fwq" firstAttribute="top" secondItem="n09-nL-BBk" secondAttribute="bottom" id="xsx-BQ-v7g"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="modelView" destination="7pK-NF-fwq" id="Gow-bn-bO0"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7kO-ew-0b4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3318" y="-154"/>
+        </scene>
+        <!--Models-->
+        <scene sceneID="sWc-uC-tXf">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="OVm-Q1-51y" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Models" id="yhe-za-XCd"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Tlu-xv-8sV">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="GZC-NB-ncg" kind="relationship" relationship="rootViewController" id="FgI-hN-qiK"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2Kz-0q-75Y" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3328" y="-1747.826086956522"/>
         </scene>
     </scenes>
 </document>
